fixed mobile email button: text not centered

--- a/src/styles/card.sass
+++ b/src/styles/card.sass
@@ -59,6 +59,7 @@
             justify-content: center
             align-items: center
             position: relative
+            text-align: center
 
             &__content
                 background-color: theme.$color-background
